--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "autoprefixer": "^10.4.4",
     "esbuild": "^0.14.36",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
